misc formatting changes to questions and pages

--- a/wisccc/templates/wisccc/base_survey.html
+++ b/wisccc/templates/wisccc/base_survey.html
@@ -33,10 +33,10 @@
         {% endblock %}
 
       </div>
-      <div class="card-footer text-muted text-center" style="font-size: small;">
+      <!-- <div class="card-footer text-muted text-center" style="font-size: small;">
         This project is a collaboration between the Center for Integrated Agricultural Systems and the Michael Fields
         Institute.
-      </div>
+      </div> -->
 
     </div>
   </div>
