--- a/wisccc/templates/wisccc/includes/form_1.html
+++ b/wisccc/templates/wisccc/includes/form_1.html
@@ -75,11 +75,11 @@
         {{ form.info_source_cover_crops_write_in|as_crispy_field }}
     </div>
 </div>
-<div class="form-row">
+<!-- <div class="form-row">
     <div class="form-group col-md-8 mb-0">
         {{ form.info_source_cover_crops_social_media|as_crispy_field }}
     </div>
-</div>
+</div> -->
 <div class="form-row">
     <div class="form-group col-md-8 mb-0">
         {{ form.support_cover_crops_1|as_crispy_field }}
