--- a/wisccc/templates/wisccc/survey_section_3.html
+++ b/wisccc/templates/wisccc/survey_section_3.html
@@ -12,14 +12,15 @@
   {{ form.media }}
 </head>
 
-<h3 class="card-title">Final thoughts</h3>
+<h3 class="card-title">IV. Final Thoughts</h3>
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
 
   {% include 'wisccc/includes/form_3.html' %}
 
   <button type="submit" class="btn btn-primary">Submit</button>
-
+  <a href="{% url 'wisc_cc_survey' %}"><button type="button" class="btn btn-secondary">Back to survey home
+      page</button></a>
 
 </form>
 
