--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -62,9 +62,9 @@
         </div>
         <!-- {% endif %} -->
       </div>
-      <div class="card-footer text-muted text-center">
+      <!-- <div class="card-footer text-muted text-center">
         Questions? See our <a href="{% url 'green_covr_references' %}">references page</a>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
