removing permissions on download ability

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -47,7 +47,7 @@
             </a>
           </div>
         </div>
-        <!-- {% if perms.wisccc.survery_manager %} -->
+        <!-- if perms.wisccc.survery_manager %} -->
         <br>
         <div class="card">
 
@@ -60,7 +60,7 @@
             <a href="{% url 'wisccc_download_data' %}" class="btn btn-primary">Download</a>
           </div>
         </div>
-        <!-- {% endif %} -->
+        <!-- endif %} -->
       </div>
       <!-- <div class="card-footer text-muted text-center">
         Questions? See our <a href="{% url 'green_covr_references' %}">references page</a>
@@ -68,4 +68,3 @@
     </div>
   </div>
 </div>
-{% endblock %}
