tweaks to wording and added warning about leaving page

--- a/wisccc/templates/wisccc/survey_section_3.html
+++ b/wisccc/templates/wisccc/survey_section_3.html
@@ -18,7 +18,7 @@
 
   {% include 'wisccc/includes/form_3.html' %}
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
   <a href="{% url 'wisc_cc_survey' %}"><button type="button" class="btn btn-secondary">Back to survey home
       page</button></a>
 
