--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -9,25 +9,25 @@
       <div class="card-body">
         <h3 class="card-title">Welcome {{ user.username }}</h3>
 
+        <p>Thank you for doing this survey We're excited for this fourth season of our cover crop citizen science
+          project, and to be able to add a spring biomass element. You are part of a state-wide collaborative effort to
+          develop sound cover crop strategies for Wisconsin. You're also helping improve tools like SnapPlus and
+          developing better cost-effective strategies for reducing erosion and conserving nutrients.</p>
+
+        <p>We will be in touch to be sure the biomass sampling is going ok, and to share other project info. After you
+          fill out the survey, check out the map and graph of the data we've collected so far! Please contact
+          Mrill Ingram <a href="mailto:mingram@wisc.edu">mingram@wisc.edu</a> with any questions</p>
+
+        <p>Dan Smith, Mrill Ingram, Ricardo Costa Silva, Gregg Sanford.</p>
+
 
         {% if completed_0 and completed_1 and completed_2 and completed_3 %}
-        <h5>Thank you</h5>
-        <p>Thank you for completing our survey</p>
-        <P>More words!</P>
-        {% else %}
-        <p>We're excited for this fourth season of our cover crop citizen science project, gathering real world data to
-          better understand how cover crops are being used in Wisconsin. We're part of a collaborative effort of
-          researchers, extension folks, and farmers like you working together to develop sound cover crop strategies.
-          We're also building a long-term statewide database of cover crop performance helping improve decision support
-          tools like SnapPlus, and developing better strategies for reducing erosion and conserving nutrients.</p>
 
-        <p>Thank you for filling out this survey. Please proceed ONLY if you have registered with us. (To register, send
-          an email with your name, mailing address, phone number, and county to Mrill Ingram <a
-            href="mailto:mingram@wisc.edu">mingram@wisc.edu</a>)</p>
+        <h5>Thank you!</h5>
 
-        <p> We will be in touch very soon about collecting an optional biomass sample and to share information about the
-          data you are sharing. We look forward to working with you!</p>
-        <p> Dan Smith, Mrill Ingram, Gregg Sanford</p>
+        <p>Thank you for completing our survey. We will be in touch if we have any questions regarding your responses.
+          If you would like to come back and edit your answers, you can do so by revisiting this page.</p>
+
         {% endif %}
 
 
