--- a/wisccc/templates/wisccc/base_survey.html
+++ b/wisccc/templates/wisccc/base_survey.html
@@ -27,7 +27,31 @@
   <div class="col-lg-8 col-md-10 col-sm-12">
     <div class="card">
       <div class="card-body">
+        <script type="text/javascript">
+          $(function () {
+            // Prevent accidental navigation away
+            $(':input').bind(
+              'change', function () { setConfirmUnload(true); });
+            $('.noprompt-required').click(
+              function () { setConfirmUnload(false); });
 
+            function setConfirmUnload(on) {
+              window.onbeforeunload = on ? unloadMessage : null;
+            }
+            function unloadMessage() {
+              return ('You have entered new data on this page. ' +
+                'If you navigate away from this page without ' +
+                'first saving your data, the changes will be lost.');
+            }
+
+            window.onerror = UnspecifiedErrorHandler;
+            function UnspecifiedErrorHandler() {
+              return true;
+            }
+
+          });
+
+        </script>
 
         {% block form %}
         {% endblock %}
