--- a/wisccc/templates/wisccc/survey_section_0.html
+++ b/wisccc/templates/wisccc/survey_section_0.html
@@ -11,6 +11,9 @@
 <head>
   {{ form.media }}
 </head>
+<script>
+  //https://stackoverflow.com/questions/140460/client-js-framework-for-unsaved-data-protection
+</script>
 
 <h3 class="card-title">I. About You</h3>
 <form method="post" enctype="multipart/form-data">
@@ -18,11 +21,13 @@
 
   {% include 'wisccc/includes/form_farmer.html' %}
 
-  <button type="submit" class="btn btn-primary">Submit</button>
-  <a href="{% url 'wisc_cc_survey' %}"><button type="button" class="btn btn-secondary">Back to survey home
+  <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
+  <a href="{% url 'wisc_cc_survey' %}"><button type="button" class="warn btn btn-secondary">Back to survey home
       page</button></a>
 
 
 </form>
+
+
 
 {% endblock %}
