--- a/wisccc/templates/wisccc/includes/form_1.html
+++ b/wisccc/templates/wisccc/includes/form_1.html
@@ -31,7 +31,7 @@
     </div>
 </div>
 <div>
-    <h5>Sources of Support</h5>
+    <h5>Sources of support</h5>
 </div>
 <div class="form-row">
     <div class="form-group col-md-6 mb-0">
