changed ordering of color changer and x axis

--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -267,8 +267,8 @@
                             <b>Change color</b>
                         </div>
                         <select id="select_color" class="group-select">
-                            <option value="cc_species">Cover crop species</option>
-                            <option value="region" selected>NOAA Climate Regions</option>
+                            <option value="cc_species" selected>Cover crop species</option>
+                            <option value="region">NOAA Climate Regions</option>
                             <option value="previous_crop">Cash crop prior</option>
                         </select>
 
@@ -340,8 +340,8 @@
                     <div class="col-md-4" id="x_axis_changer">
 
                         <select id="xFactor" class="group-select">
-                            <option value="total_precip">Total precipitation</option>
-                            <option value="acc_gdd" selected>Growing degree days</option>
+                            <option value="total_precip" selected>Total precipitation</option>
+                            <option value="acc_gdd">Growing degree days</option>
                             <option value="cc_planting_date_flat">Planting date</option>
 
                         </select>
