tweak to email address

--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -16,7 +16,7 @@
 
         <p>We will be in touch to be sure the biomass sampling is going ok, and to share other project info. After you
           fill out the survey, check out the map and graph of the data we've collected so far! Please contact
-          Mrill Ingram <a href="mailto:mingram@wisc.edu">mingram@wisc.edu</a> with any questions</p>
+          Mrill Ingram <a href="mailto:mingram@wisc.edu">(mingram@wisc.edu)</a> with any questions</p>
 
         <p>Dan Smith, Mrill Ingram, Ricardo Costa Silva, Gregg Sanford.</p>
 
