--- a/wisccc/templates/wisccc/includes/form_2.html
+++ b/wisccc/templates/wisccc/includes/form_2.html
@@ -17,7 +17,7 @@
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-8 mb-0">
+    <div class="form-group col-md-10 mb-0">
         {{ form.farm_location|as_crispy_field }}
     </div>
 </div>
@@ -59,9 +59,6 @@
 </div>
 <h5>Cover crop dates and planting rates</h5>
 <div class="form-row">
-    <!-- <div class="form-group col-md-5 mb-0">
-        {{ form.previous_crop|as_crispy_field }}
-    </div> -->
     <div class="form-group col-md-5 mb-0">
         {{ form.cash_crop_planting_date|as_crispy_field }}
     </div>
@@ -123,10 +120,16 @@
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-8 mb-0">
+    <div class="form-group col-md-12 mb-0">
         {{ form.cover_crop_species_and_rate_write_in|as_crispy_field }}
     </div>
 </div>
+<div class="form-row">
+    <div class="form-group col-md-12 mb-0">
+        {{ form.cover_crop_multispecies_mix_write_in|as_crispy_field }}
+    </div>
+</div>
+
 
 <div class="form-row">
     <div class="form-group col-md-5 mb-0">
@@ -141,21 +144,21 @@
 </div>
 
 <div class="form-row">
-    <div class="form-group col-md-4 mb-0">
+    <div class="form-group col-md-8 mb-0">
         {{ form.cover_crops_delay_cash_crop|as_crispy_field }}
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-2 mb-0">
+    <div class="form-group col-md-4 mb-0">
         {{ form.save_cover_crop_seed|as_crispy_field }}
     </div>
-    <div class="form-group col-md-6 mb-0">
+    <div class="form-group col-md-8 mb-0">
         {{ form.source_cover_crop_seed|as_crispy_field }}
     </div>
 </div>
 
 <div>
-    <h5>Nutrient Management and tillage</h5>
+    <h5>Nutrient management and tillage</h5>
 </div>
 
 <div class="form-row">
@@ -190,14 +193,12 @@
         {{ form.tillage_system_cash_crop|as_crispy_field }}
     </div>
     <div class="form-group col-md-5 mb-0">
-        {{ form.primary_tillage_equipment_1|as_crispy_field }}
+        {{ form.primary_tillage_equipment|as_crispy_field }}
     </div>
 </div>
 <div class="form-row">
-    <!-- <div class="form-group col-md-6 mb-0">
-        {{ form.primary_tillage_equipment_2|as_crispy_field }}
-    </div> -->
-    <div class="form-group col-md-5 mb-0">
+
+    <div class="form-group col-md-12 mb-0">
         {{ form.primary_tillage_equipment_write_in|as_crispy_field }}
     </div>
 </div>
@@ -205,7 +206,7 @@
     <div class="form-group col-md-6 mb-0">
         {{ form.secondary_tillage_equipment|as_crispy_field }}
     </div>
-    <div class="form-group col-md-5 mb-0">
+    <div class="form-group col-md-6 mb-0">
         {{ form.secondary_tillage_equipment_write_in|as_crispy_field }}
     </div>
 </div>
@@ -219,7 +220,7 @@
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-8 mb-0">
+    <div class="form-group col-md-12 mb-0">
         {{ form.cover_crop_seeding_method_write_in|as_crispy_field }}
     </div>
 </div>
