--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -9,24 +9,34 @@
       <div class="card-body">
         <h3 class="card-title">Welcome {{ user.username }}</h3>
 
-        <p>Thank you for doing this survey. We're excited for this fourth season of our cover crop citizen science
-          project, and to be able to add a spring biomass element. You are part of a state-wide collaborative effort to
-          develop sound cover crop strategies for Wisconsin. You're also helping improve tools like SnapPlus and
-          developing better cost-effective strategies for reducing erosion and conserving nutrients.</p>
+        {% if completed_0 and completed_1 and completed_2 and completed_3 %}
 
-        <p>We will be in touch to be sure the biomass sampling is going ok, and to share other project info. After you
-          fill out the survey, check out the map and graph of the data we've collected so far! Please contact
+        <h4>Thank you!</h4>
+
+        <p>Thank you for completing our survey. If you would like to edit your answers, just click on one of the four
+          survey sections below. We will be in touch to be sure the biomass sampling is going ok, and to share other
+          project info. Also, check out the map and graph of the data we've collected so far! Project information
+          available on the Michael Fields website.</p>
+
+        <p>Please contact
           Mrill Ingram <a href="mailto:mingram@wisc.edu">(mingram@wisc.edu)</a> with any questions</p>
 
         <p>Dan Smith, Mrill Ingram, Ricardo Costa Silva, Gregg Sanford.</p>
 
 
-        {% if completed_0 and completed_1 and completed_2 and completed_3 %}
+        {% else %}
 
-        <h5>Thank you!</h5>
+        <p>Thank you for doing this survey. We're excited for this fourth season of our cover crop citizen science
+          project, and to be able to add a spring biomass element. You are part of a state-wide collaborative effort to
+          develop sound cover crop strategies for Wisconsin. You're also helping improve tools like SnapPlus and
+          developing better cost-effective strategies for reducing erosion and conserving nutrients.</p>
 
-        <p>Thank you for completing our survey. We will be in touch if we have any questions regarding your responses.
-          If you would like to come back and edit your answers, you can do so by revisiting this page.</p>
+        <p>We will be in touch to be sure the biomass sampling is going ok, and to share other project info. Also, check
+          out the map and graph of the data we've collected so far! Please contact
+          Mrill Ingram <a href="mailto:mingram@wisc.edu">(mingram@wisc.edu)</a> with any questions</p>
+
+        <p>Dan Smith, Mrill Ingram, Ricardo Costa Silva, Gregg Sanford.</p>
+
 
         {% endif %}
 
