bit of text on home landing

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -20,6 +20,8 @@
               <div class="card-body">
                 <h5 class="card-title">Cover Crop Survey</h5>
                 <p class="card-text">
+                  Citizen Science participants only. Contact Mrill Ingram <a
+                    href="mailto:mingram@wisc.edu">(mingram@wisc.edu)</a> with questions
                 </p>
 
               </div>
