--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -9,9 +9,9 @@
       <div class="card-body">
         <h3 class="card-title">Welcome {{ user.username }}</h3>
 
-        <!-- if not b_registered %}
+        {% if not b_registered %}
 
-        <div class="alert alert-danger" role="alert">
+        <div class="alert alert-warning" role="alert">
           Have you registered to fill out this survey? We do not recognize
           the email address you have used to create this account.
           <br>
@@ -19,7 +19,7 @@
             href="https://forms.gle/N7SzjedFwGJFXPUJ9">here</a>.
         </div>
 
-        endif %} -->
+        {% endif %}
 
         {% if completed_0 and completed_1 and completed_2 and completed_3 %}
 
