opens google form in new tab

--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -15,8 +15,8 @@
           Have you registered to fill out this survey? We do not recognize
           the email address you have used to create this account.
           <br>
-          For your survey response to be accepted we need you to register <a
-            href="https://forms.gle/N7SzjedFwGJFXPUJ9">here</a>.
+          For your survey response to be accepted we need you to register <a href="https://forms.gle/N7SzjedFwGJFXPUJ9"
+            target="_blank" rel="noopener noreferrer">here</a>.
         </div>
 
         {% endif %}
