--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -245,10 +245,10 @@
 
         <div class="fluid-row" id="header">
 
-            <h2 class="title toc-ignore">Wisc Cover Crop</h2>
+            <h2 class="title toc-ignore"><br>Wisconsin Citizen Science Cover Crop Project</h2>
 
 
-            <h4 class="date">July, 2023</h4>
+            <h4 class="date"></h4>
             <h5 class="author">Mrill Ingram, <a href="mailto:mingram@wisc.edu">mingram@wisc.edu</a></h5>
 
 
@@ -273,6 +273,15 @@
                         </select>
 
                         <svg width="200px" height="250px"></svg>
+                        <br>
+                        <br>
+                        <br>
+
+                        <button type="button" class="btn btn-secondary" data-toggle="modal"
+                            data-target="#helpInformation">
+                            What is this?
+                        </button>
+
                     </div>
                     <div class="col-md-8" id="my_dataviz">
                     </div>
@@ -288,7 +297,7 @@
                     <div class=" col-md-6" id="filters">
                         <table>
                             <tr>
-                                <td>Cover-crop species</td>
+                                <td>Cover crop species</td>
                                 <td><select id="select_species" class="group-select">
                                     </select></td>
                             </tr>
@@ -397,7 +406,76 @@
             </div>
         </div>
     </div>
+    <!-- Modal -->
+    <div class="modal fade" id="helpInformation" tabindex="-1" role="dialog" aria-labelledby="helpInformationLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title" id="exampleModalLabel">About this graph</h3>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>This graph shows data about how cover crops grown in Wisconsin.
+                        Data were collected from surveys about the 2020, 2021, 2022 seasons.
+                        Each data point represents cover crop information for one field from a farmer who completed a
+                        survey.
+                    </p>
+                    <p>The graph illustrates the relationship between cover crop biomass (how much of the cover crop
+                        was present above ground) and different factors which could influence how well it grew.
+                        You can manipulate what factor is shown at the bottom of the graph.
+                        You can choose to visualize the relationship between biomass and total precipitation
+                        received, growing degree days, or planting date.
+                    </p>
 
+                    <p><b>Colors</b> of the points can be changed so individual data points represent different
+                        cover crop species, indicate in what climate region they were grown, or what was planted prior
+                        to the cover crop.
+                    </p>
+
+                    <p>The <b>filters</b> allow you to see how the relationship between cover crop biomass and different
+                        growth
+                        factors varies for different subgroups of the data.
+                        Note that if you have several filters applied at the same time there may be very few data points
+                        remaining after the filters, and the graph may look blank.
+                    </p>
+
+                    <p>The <b>regression line</b> toggle allows you to visualize the statistical relationship between
+                        cover
+                        crop biomass and the selected growth variable.
+                        Regression allows us to quantify the relationship of the variables.
+                        When toggledyou will see a line appear on the graph and an equation representing the statistical
+                        relionship of the variables as well as a brief sentence describing how strong or weak the
+                        relationship is.
+                    </p>
+                    <p>When you <b>hover</b> over individual points you will see details from what the farmer enteredin
+                        the
+                        survey about the cover crop species planted.
+                        Where it was filled in, information about planting rate will also appear.
+                        If manure was applied, the quantity applied will be shown.
+                    </p>
+                    <p><b>Climate regions</b> are areas delineated by the <a target="_blank" rel="noopener noreferrer"
+                            href="https://www.ncei.noaa.gov/access/monitoring/reference-maps/conus-climate-divisions">National
+                            Oceanic and Atmospheric Administration
+                            (NOAA)</a> to create areas of similar temperature and precipitation.
+                        This allows you to understand the geographic similarity between different data points.
+                    </p>
+                    <p><b>Growing degree days</b> are a measure of how much heat has accumulated over a season.
+                        This can indicate how favorable were conditions for plants.
+                    </p>
+                    <p>
+                        <!-- Null data points
+                        Where did the biomass data come from? -->
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script>
 
         var margin = { top: 10, right: 30, bottom: 55, left: 50 },
@@ -446,7 +524,8 @@
 
         function formatToolTip(feature) {
 
-            var tool_tip_string = "Total precip: " + feature.properties.total_precip + " in" + "<br/>" +
+            var tool_tip_string =
+                //"Total precip: " + feature.properties.total_precip + " in" + "<br/>" +
                 feature.properties.cc_species + "<br/>" +
                 feature.properties.cc_planting_rate + "<br/>"
 
