updated heading for section IV; added "are you open for sharing" as text not as additional question

--- a/wisccc/templates/wisccc/survey_section_3.html
+++ b/wisccc/templates/wisccc/survey_section_3.html
@@ -12,7 +12,7 @@
   {{ form.media }}
 </head>
 
-<h3 class="card-title">IV. Final Thoughts</h3>
+<h3 class="card-title">IV. Thoughts on outreach about cover cropping</h3>
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
 
