--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -90,13 +90,15 @@
 
             {% if completed_3 %}
             <a href="{% url 'wisc_cc_survey3' %}"
-              class="list-group-item list-group-item-action list-group-item-success">IV. Final Thoughts - Completed!
+              class="list-group-item list-group-item-action list-group-item-success">IV. Thoughts on outreach about
+              cover cropping - Completed!
               Click
               to
               edit your response.</a>
             {% else %}
             <a href="{% url 'wisc_cc_survey3' %}"
-              class="list-group-item list-group-item-action list-group-item-warning">IV. Final Thoughts</a>
+              class="list-group-item list-group-item-action list-group-item-warning">IV. Thoughts on outreach about
+              cover cropping</a>
             {% endif %}
 
           </div>
