--- a/wisccc/templates/wisccc/response_table.html
+++ b/wisccc/templates/wisccc/response_table.html
@@ -6,14 +6,25 @@
 {% load bootstrap4 %}
 
 {% block content %}
-<div class="row justify-content-center">
+<style>
+  .complete {
+    color: green;
+  }
 
-  <div class="card">
-    <div class="card-body">
-      <h3 class="card-title">Survey Responses</h3>
-      <h5 class="card-title"><a href="{% url 'wisccc_download_data' %}">Download all data</a></h5>
-      <div class="col-md-12">
-        {% render_table table %}
+  .incomplete {
+    color: red;
+  }
+</style>
+<div class="row justify-content-center">
+  <div class="col-lg-8 col-md-10 col-sm-12">
+
+    <div class="card">
+      <div class="card-body">
+        <h3 class="card-title">Survey Responses</h3>
+        <h5 class="card-title"><a href="{% url 'wisccc_download_data' %}">Download all data</a></h5>
+        <div class="col-md-12">
+          {% render_table table %}
+        </div>
       </div>
     </div>
   </div>
